# SecureIVSHMEM

./: README.md
assets/graphs/: .gitignore  draw_mpmc.py  draw_ring_gain.py  draw_shm_basic.py  mtl_config.py
assets/graphs/data/: mpmc.csv  ring_buffer.csv  ring_data.csv  shm_basic.csv
assets/idf/: secure_ivshmem.md  secure_ivshmem.txt
assets/papers/: .gitignore  paper.tex
assets/papers/ICESS/: latexindent.yaml  lint.sh  paper.tex
assets/umls/: channel_protocol.puml  secure_protocol.puml
cert/: .gitignore  generate_ca_key.sh  generate_service_key.sh
dev_shm/: .gitignore  Makefile  README.md  build_and_load.sh  myshm.c
dev_shm/examples/: write_test.c
examples/: CMakeLists.txt
examples/ivshmem_client/: CMakeLists.txt  ivshmem-client.h  main.c  queue_compat.h
examples/no_lock_test/: CMakeLists.txt
examples/reader/: CMakeLists.txt  aes_main.c  lock_base_main.c
examples/shm_test/: CMakeLists.txt  shm_comm.c
examples/trusted_main/: CMakeLists.txt  main.c
examples/writer/: CMakeLists.txt  aes_main.c  lock_init.c  main.c
ipc_shm_em/: CMakeLists.txt
ipc_shm_em/include/: ivshmem_lib.h
ipc_shm_em/scripts/: copy_dir_to_shared.sh  lint.sh  make_prompt.sh
ipc_shm_em/src/: ivshmem_lib.c  reader.c  reader.cpp  writer.c  writer.cpp
ivshmem_perf/: CMakeLists.txt  README.md
ivshmem_perf/examples/ivshmem_client/: compat.h  ivshmem-client.c
ivshmem_perf/examples/no_lock_test/: CMakeLists.txt  reader.c  writer.c
ivshmem_perf/examples/reader/: CMakeLists.txt  lock_base_main.c  main.c
ivshmem_perf/examples/writer/: CMakeLists.txt  lock_base_main.c  lock_init.c  main.c
ivshmem_perf/hw/: .gitignore  Makefile  myshm.c  write_test.c
ivshmem_perf/include/: ivshmem_data.h  ivshmem_lib.h  ivshmem_lock_base.h  ivshmem_secure.h  ivshmem_trusted.h
ivshmem_perf/scripts/: copy_dir_to_shared.sh  make_prompt.sh
ivshmem_perf/src/: _ivshm_kernel.c  ivshm_kernel.c  ivshmem_data.c  ivshmem_lib.c  ivshmem_lock_base.c  ivshmem_secure.c  ivshmem_trusted.c  reader.c  trusted_main.c  writer.c
kernel_module/: .clang-format  .gitignore  Makefile  README.md  build_and_load.sh  ivshmem_uio_hook.c  lint.sh
kernel_module/test_app/: Makefile  uio_test.c
qemu/: README.md
qemu/scripts/: copy_project.sh  init_disk.sh  run_ivshmem.sh
qemu_env/: .gitignore  README.md
qemu_env/docs/: setup_alpine.md
qemu_env/scripts/: copy_project.sh  run_doorbell.sh  run_ivshmem.sh
qemu_env/virtio_test/: launch_vm1.sh  launch_vm2.sh
secure_ivshmem/: CMakeLists.txt  README.md
secure_ivshmem/include/: ivshmem_crypto.h  ivshmem_lib.h  ivshmem_secure.h  ivshmem_trusted.h
secure_ivshmem/scripts/: lint.sh
secure_ivshmem/src/: ivshmem_crypto.c  ivshmem_lock_base.c  ivshmem_secure.c  ivshmem_trusted.c
